<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.SearchActivity">

    <EditText
        android:id="@+id/fragment_notification_query_term"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/search_query_term"
        android:textCursorDrawable="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/fragment_notification_checkBox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:text="@string/checkbox_arts"
        app:layout_constraintBottom_toTopOf="@+id/fragment_notification_checkBox_sports"
        app:layout_constraintStart_toStartOf="@+id/fragment_notification_query_term"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_query_term" />

    <CheckBox
        android:id="@+id/fragment_notification_checkBox_politics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/checkbox_politics"
        app:layout_constraintEnd_toEndOf="@+id/fragment_notification_query_term"
        app:layout_constraintStart_toEndOf="@+id/fragment_notification_checkBox_arts"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_query_term" />

    <CheckBox
        android:id="@+id/fragment_notification_checkBox_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/checkbox_business"
        app:layout_constraintEnd_toEndOf="@+id/fragment_notification_query_term"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/fragment_notification_checkBox_sports"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_checkBox_politics" />

    <CheckBox
        android:id="@+id/fragment_notification_checkBox_sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:text="@string/checkbox_sports"
        app:layout_constraintStart_toStartOf="@+id/fragment_notification_query_term"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_checkBox_arts" />

    <CheckBox
        android:id="@+id/fragment_notification_checkBox_entrepreneurs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/checkbox_entrepreneurs"
        app:layout_constraintEnd_toEndOf="@+id/fragment_notification_query_term"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toEndOf="@+id/fragment_notification_checkBox_travels"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_checkBox_business" />

    <CheckBox
        android:id="@+id/fragment_notification_checkBox_travels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="15dp"
        android:text="@string/checkbox_travels"
        app:layout_constraintStart_toStartOf="@+id/fragment_notification_query_term"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_checkBox_sports" />

    <Switch
        android:id="@+id/fragment_notification_oncePerDayBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enable_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_notification_checkBox_entrepreneurs" />

</android.support.constraint.ConstraintLayout>