...
        android:layout_marginTop="20dp"
        android:text="@string/checkbox_travels"
        app:layout_constraintStart_toStartOf="@+id/fragment_search_end_date_edit"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_checkBox_sports" />

    <TextView
        android:id="@+id/fragment_search_search_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
...
